--- a/index.html
+++ b/index.html
@@ -18,15 +18,13 @@
   </style>
 </head>
 <body>
-
   <Section> 
      <!-- header and nav elements -->
     <header>
-      <div>
+      <div class="logo">
         <img src="./images/logo.svg" alt="">
-      </div>
-
-      <nav>
+      </div> 
+      <nav class="nav"></nav>>
         <ul>
           <li><a href="#">Features</a></li>
           <li><a href="#">Team</a></li>
@@ -34,18 +32,23 @@
         </ul>
       </nav>
     </header>
-
   </Section>
-
-
-
 
   <!-- 1st main and hero section -->
+
   <Section> 
-
-  </Section>
-
-  <Section><!-- 2nd main and hero section -->
+<div>
+  <h1>All your files in one secure location, accessible anywhere.</h1>
+</div>
+<p>Fylo stores your most important files in one secure location. 
+    Access them wherever you need, share and collaborate with friends, 
+    family, and co-workers.
+  </p>
+  <input type="email" name="" id="email">  
+  <button>Get Started</button>
+</Section>
+  <!-- 2nd main and hero section -->
+  <Section>
   
   </Section>
   
@@ -56,7 +59,7 @@
   Team
   Sign In
 
-  All your files in one secure location, accessible anywhere.
+  
 
   Fylo stores your most important files in one secure location. 
   Access them wherever you need, share and collaborate with friends, 
