--- a/index.html
+++ b/index.html
@@ -18,40 +18,89 @@
   </style>
 </head>
 <body>
+
+
   <Section> 
      <!-- header and nav elements -->
-    <header>
-      <div class="logo">
-        <img src="./images/logo.svg" alt="">
-      </div> 
-      <nav class="nav"></nav>>
+    <header class="header">
+      <div class="logo"> <img src="./images/logo.svg" alt=""></div> 
+      <div class="nav-links">
         <ul>
           <li><a href="#">Features</a></li>
           <li><a href="#">Team</a></li>
           <li><a href="#">Sign In</a></li>
         </ul>
-      </nav>
+      </div>
     </header>
   </Section>
 
-  <!-- 1st main and hero section -->
+  
 
-  <Section> 
-<div>
+
+
+
+
+
+
+<!-- 1st main and hero section -->
+  <Section id="first-hero-section"> 
+<div class="" id="block1">
   <h1>All your files in one secure location, accessible anywhere.</h1>
 </div>
 <p>Fylo stores your most important files in one secure location. 
     Access them wherever you need, share and collaborate with friends, 
     family, and co-workers.
   </p>
-  <input type="email" name="" id="email">  
+  <input type="email" name="" id="email" placeholder="Enter your email..">  
   <button>Get Started</button>
+  <div id="block2">
+    <img src="/images/illustration-1.svg" alt="">
+  </div>
+
 </Section>
+
+
+
+
+
+
+
+
+
+
+
+
   <!-- 2nd main and hero section -->
-  <Section>
-  
+
+  <Section id="second-hero-section">
+    <div id="block3">
+        <h1>Stay productive, wherever you are    </h1>
+        <p>Never let location be an issue when accessing your files. Fylo has you 
+        covered for all of your file storage needs</p>
+        <a href="">See how Fylo works</a>
+        <div>
+          <img src="/images/icon-access-anywhere.svg" alt="">
+          <h2>Access your files, wherever you are</h2>
+          <p>The ability to use a smartphone, tablet, or computer to access your account means your files follow you everywhere.</p>
+        </div>
+    </div>
+  <div id="block4">
+    <img src="/images/illustration-2.svg" alt="">
+  </div>
   </Section>
   
+
+
+
+
+
+
+
+
+
+
+
+
   <Section></Section>
   <Section></Section>
 
