--- a/index.html
+++ b/index.html
@@ -129,16 +129,14 @@
         <p>It only takes a minute to sign up and our free starter tier is extremely generous. 
           If you have any questions, our support team would be happy to help you.</p>
       </div>
-
-      <div class="blockF">
+    </div>
+    <div class="blockF">
         <div class="blockF-div">
-          <input type="email" name="" id="email" placeholder="Enter your email..">
-        <button class="button2">Get Started For Free</button>
-
+          <input type="email" name="" id="email" placeholder="email@example.com">
         </div>
-
-      </div>
-
+        <div>
+          <button class="button2">Get Started For Free</button>
+        </div>
     </div>
     
 
